--- a/frontend/src/app/components/create-people/create-people.component.html
+++ b/frontend/src/app/components/create-people/create-people.component.html
@@ -1,4 +1,5 @@
 
+  <div *ngIf="submitted===false">
   <form [formGroup]="form" (ngSubmit)="createPeople()" >
     <div class="relative z-0 mb-6 w-full group">
         <input  formControlName="name" [ngClass]="{ '': submitted && f['name'].errors }"  type="text" name="name" id="name" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" "/>
@@ -76,8 +77,8 @@
       </div>
 
       <button type="submit"  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
-
-
+</form>
+    </div>
     <div *ngIf="status" [ngClass]="status==='fail' ? 'p-4 mb-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800': 'p-4 mb-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800' " role="alert">
       <h4>{{ message }}</h4>
     </div>
