--- a/frontend/src/app/components/create-people/create-people.component.html
+++ b/frontend/src/app/components/create-people/create-people.component.html
@@ -23,7 +23,7 @@
         </div>
       </div>
     <div class="relative z-0 mb-6 w-full group">
-        <input formControlName="cpf" [ngClass]="{ '': submitted && f['cpf'].errors }"   type="text" name="cpf" id="cpf" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" "/>
+        <input mask="000.000.000-00"  formControlName="cpf" [ngClass]="{ '': submitted && f['cpf'].errors }"   type="text" name="cpf" id="cpf" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" "/>
         <label for="cpf" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">CPF: </label>
         <div *ngIf="submitted && f['cpf'].errors" class="mt-2 text-sm text-red-600 dark:text-red-500">
           <div *ngIf="f['cpf'].errors['required']">O CPF não pode estar vazio!</div>
@@ -31,7 +31,7 @@
         </div>
       </div>
     <div class="relative z-0 mb-6 w-full group">
-        <input formControlName="cep" [ngClass]="{ '': submitted && f['cep'].errors }"   type="text" name="cep" id="cep" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" "/>
+        <input mask="00000-000" formControlName="cep" [ngClass]="{ '': submitted && f['cep'].errors }"   type="text" name="cep" id="cep" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" "/>
         <label for="cep" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">CEP: </label>
         <div *ngIf="submitted && f['cep'].errors" class="mt-2 text-sm text-red-600 dark:text-red-500">
           <div *ngIf="f['cep'].errors['required']">O CEP não pode estar vazio!</div>
@@ -69,14 +69,14 @@
         </div>
       </div>
     <div class="relative z-0 mb-6 w-full group">
-        <input formControlName="telephone" [ngClass]="{ '': submitted && f['telephone'].errors }"   type="text" name="telephone" id="telephone" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" "/>
+        <input mask="(00)0000-0000" formControlName="telephone" [ngClass]="{ '': submitted && f['telephone'].errors }"   type="text" name="telephone" id="telephone" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" "/>
         <label for="telephone" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Telefone: </label>
         <div *ngIf="submitted && f['telephone'].errors" class="mt-2 text-sm text-red-600 dark:text-red-500">
           <div *ngIf="f['telephone'].errors['required']">O telefone não pode estar vazio!</div>
         </div>
       </div>
 
-      <button type="submit"  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+      <button type="submit"  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Adicionar</button>
 </form>
     </div>
     <div *ngIf="status" [ngClass]="status==='fail' ? 'p-4 mb-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800': 'p-4 mb-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800' " role="alert">
